  TODO: Make mpg123 smarter to recognize concatenated streams, re-start the frame counter.
AND TAKE PROPER CARE OF THAT HACK TO UN-IGNORE FRAMES FAR OVER LASTFRAME!
This hack brings the sound, but also brings funky behaviour of mpg123 -k <n> ... with suddenly non-present verbose position info, for example.

- Added info about input buffer fill to mpg123_getstate().
- Fix build without feeder.
- Fix parsing of audiophile ReplayGain from Info tag (perhaps relevant for the future, yet have to see a file that has that value present).
- Fix parsing of any ReplayGain value from Info tag! All these years and nobody told me that we used only the last 5 bits, not 9?! I'm to blame, too: I use RVA values from ID3v2 tags... this is surreal.

1.13.4
---
- Fix bogus error on resync with big offsets (hits systems that have bigger off_t than int), bug 3393801.
- Fix windows binary package build script again with plugdir.

1.13.3
---
- Fix an endless loop on bad headers, bug 3267863.
- Prevent compiler warnings about unused variables with gcc 4.6 .
- Fix return value handling of getaddrinfo(), bug 3288333.
- Make decwin size computation work for OPT_ARM and sizeof(long) != 4 (bug 3288360).

1.13.2
---
- Updated .NET wrapper (MPG123_SKIP_ID3V2, encsize and mpg123_strlen functions) by Malcolm Boczek.
- Fix crash when calling mpg123_decoder() before opening a track -- a rare use case since one can choose a decoder with mpg123_new() already.
- Fix format change detection for certain (artificial) concatenated streams (p.ex. MPEG 1 frames following MPEG 2 frames).
- Prevent the nasty of bug 3154889: No change of pitch without a current audio format. No proper solution, but more like earlier behaviour.
- Fix some compiler warnings.
- Fix a memory leak in the module loader, also some in the examples, for being pedantic.
- More use of AC_LANG_SOURCE to silence autoconf.

1.13.1
---